<resources>
    <string name="app_name">Commercial_platform</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Автомобили</string>
    <string name="ad_pc">ПК</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегестрируйтесь!</string>
    <!-- Sign Dialog -->
    <string name="email_reset_password_was_sent">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">
        Для восстановления пароля укажите ваш Email адресс!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_error">Не удалось отпраить email для подтверждения!</string>
    <string name="send_verification_done">
        На вашу почту была отпралена ссылка для подтверждения вашего аккаунта!</string>
    <!-- Sign Dialog -->
    <string name="link_done">Email успешно подключен Google аккаунту</string>
    <!-- Edit Activity -->
    <string name="select_country">*ВЫБЕРИТЕ СТРАНУ</string>
    <string name="select_city">*ВЫБЕРИТЕ ГОРОД</string>
    <string name="country">СТРАНА</string>
    <string name="city">ГОРОД</string>
    <string name="index">ИНДЕКС</string>
    <string name="tel">ТЕЛЕФОН</string>
    <string name="tel_number">*НОМЕР ТЕЛЕФОНА</string>
    <string name="category">КАТЕГОРИЯ</string>
    <string name="select_category">*ВЫБЕРИТЕ КАТЕГОРИЮ</string>
    <string name="price">ЦЕНА</string>
    <string name="price_hint">*УКАЖИТЕ ЦЕНУ</string>
    <string name="description">ОПИСАНИЕ</string>
    <string name="description_hint">*УКАЖИТЕ ОПИСАНИЕ</string>
    <string name="with_send">С ОТПРАВКОЙ</string>
    <string name="send">ОТПРАВКА</string>
    <string name="publish">ОПУБЛИКОВАТЬ</string>



</resources>